Joseki3 : Changes
=================


v3.0 from v2.1
--------------
(partial list)

Java client interface: QueryEngineHTTP becomes the general class for any
SPARQL/RDQL/ARQ query.