@@ -6,5 +6,14 @@ v3.0 from v2.1
 --------------
 (partial list)
 
-Java client interface: QueryEngineHTTP becomes the general class for any
+Update operations are current not supported.  This is a query server only
+at the moment.
+
+Java client interface: 
+The classes to encapsulate queries are:
+
+
+
+
+QueryEngineHTTP becomes the general class for any
 SPARQL/RDQL/ARQ query.
